# deno-experiments

fail-no-snapshot/: README.md
fail-no-snapshot/src/: main.rs
fail-snapshot-1/: Cargo.toml  README.md
fail-snapshot-1/src/: create_snapshot.rs  permissions.rs
pass-external-snapshot/: scratch.txt
pass-external-snapshot/pkg/: index.js  package.json
pass-external-snapshot/src/: main.rs
pass-no-snapshot/: Cargo.toml
pass-no-snapshot/src/: main.rs  worker.rs
snapshot-1/src/: create_snapshot.rs  main.rs
three/: Cargo.toml
three/src/: create_snapshot.rs  main.rs  request_properties.rs
three/src/runtime/: mod.rs  runtime.rs
