[package]
name = "no-snapshot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
deno_ast = { version = "=0.34.2", features = ["transpiling", "transforms", "typescript", "cjs"] }
deno_broadcast_channel = "=0.135.0"
deno_cache = "=0.73.0"
deno_canvas = "=0.10.0"
deno_console = "=0.141.0"
deno_core = "=0.269.0"
deno_cron = "=0.21.0"
deno_crypto = "=0.155.0"
deno_fetch = "=0.165.0"
deno_ffi = "=0.128.0"
deno_fs = "=0.51.0"
deno_http = "=0.138.0"
deno_io = "=0.51.0"
deno_kv = "=0.49.0"
deno_napi = "=0.71.0"
deno_net = "=0.133.0"
deno_node = "=0.78.0"
deno_tls = "=0.128.0"
deno_url = "=0.141.0"
deno_web = "=0.172.0"
deno_webgpu = "=0.108.0"
deno_webidl = "=0.141.0"
deno_websocket = "=0.146.0"
deno_webstorage = "=0.136.0"
deno_runtime = { version = "0.149.0", features = ["include_js_files_for_snapshotting"] }

tokio = { version = "1.36.0", features = ["full"] }
hyper = { version = "=1.1.0", features = ["full"] }
hyper-util = { version = "=0.1.2", features = ["tokio", "server", "server-auto"] }
hyper_v014 = { package = "hyper", version = "0.14.26", features = ["runtime", "http1"] }
percent-encoding = "2.3.0"
serde = "1.0.197"
